2006-03-07  Christian Stimming  <stimming@tuhh.de>

	* Makefile.am: Add po/gnucash.pot to EXTRA_DIST because the
	translation template is needed in the tarball for translators.

2006-03-07  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome/gnc-plugin-page-register.c: Disable sensitivity of
	  style radio actions for registers with ledger_type != LD_SINGLE.

2006-03-07  Derek Atkins  <derek@ihtfp.com>

	* lib/libgsf-1.12.3/tests/test-msole1.c:
	  properly ignore the return value of fgets().  Fixes an FC4 error.

2006-03-06  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/glade/sched-xact.glade: Change initial sensitivity of
	auto-create+notify SX pref.

	* src/gnome/dialog-sxsincelast.c (create_each_transaction_helper):
	Add multi-commodity SX support.  Bug#333532.

	* packaging/gnucash-1.9.x.ebuild (SRC_URI): Mods for ebuild to be
	used as an SVN ebuild.

2006-03-06  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-html-graph-gog.c: Save the go graph in the
	  GtkHTMLEmbedded object. Add printing support for the graphs
	  (depends on #332884). A bit of formatting.

	* src/gnome-utils/gnc-html.[ch]: Correct prototype of
	  GncHTMLObjectCB to return gboolean.

	* src/gnome-utils/print-session.[ch]: Create a new job with a
	  default config for the print dialog. Remove GnomePrintPaper
	  *paper from the PrintSession.

2006-03-06  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/ofx/gnc-ofx-import.c: Fix OFX import problem
	with some dividends transactions. Patch by David Reiser. #164645.

	* src/import-export/import-backend.c: Fix crash when "clear" is
	chosen but no matching transaction is selected. Now those imported
	transactions will silently be ignored. #317917.

2006-03-05  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 1.9.2

2006-03-05  David Hampton  <hampton@employees.org>

	* src/engine/Transaction.c:
	* src/engine/Split.c: Use utf8 collation routines when sorting